ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: / 
spec:
  ingressClassName: "nginx"
  defaultBackend:
    service:
      name: kubserv
      port:
        number: 80
  rules:
  - http:
      paths:
      - backend:
          service:
            name: kubserv
            port: 
              number: 80
        path: /
        pathType: Prefix
