tmpold.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubserv
  labels:
    app: kubserv
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
      maxSurge: 1
  template:
    metadata:
      labels:
        app: kubserv
  selector:
    app: kubserv
    spec:
      containers:
      - name: kubserv
        image: docker.io/kristgo/kubserv:0.0.5
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8000
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8000
        resources:
          limits:
            cpu: 200m
            memory: 400Mi
          requests:
            cpu: 100m
            memory: 200Mi
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: kubserv
  labels:
    app: kubserv
spec:
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: kubserv
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/rewrite-target: /
  labels:
    app: kubserv
  name: kubserv
spec:
  backend:
    serviceName: kubserv
    servicePort: 80
  rules:
  - host: kubserv.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubserv
            port:
              number: 80
---
